test/error/scan/CyrApostropheEnd.mod
MODULE CyrApostropheEnd;

VAR А': INTEGER;

END CyrApostropheEnd.
